<resources>
    <string name="app_name">ToDoLog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ToDoLog</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search_text_message">Enter search text</string>
    <string name="action_settings">Settings</string>
    <string name="group_edit">Edit group</string>
    <string name="group_select">Select group</string>

    <string name="widget_title">Loading...</string>

    <string name="review_dialog_title">Please rate for ToDoLog!</string>
    <string name="review_dialog_message">Thank you for using ToDoLog. It will be an encouragement to continue improving the app so that it is easy to use.</string>
    <string name="review_dialog_rate">Rate ToDoLog</string>
    <string name="review_dialog_rate_later">Remind me later</string>
    <string name="review_dialog_rate_cancel">Do not rate</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="swipe_button_delete">Delete</string>
    <string name="swipe_button_detail">Detail</string>
    <string name="swipe_button_chart">Chart</string>

    <string name="group_edit_title">Edit group</string>
    <string name="group_default_name">Things to do</string>
    <string name="group_dialog_title"> : Delete？</string>
    <string name="group_dialog_detail">ToDo list registered in the group are also deleted. Is it OK?</string>
    <string name="group_dialog_ok">OK</string>
    <string name="group_dialog_cancel">Cancel</string>

    <string name="detail_title">Detail</string>
    <string name="detail_status">Status</string>
    <string name="detail_taskgroup">Group</string>
    <string name="detail_status_todo">ToDo</string>
    <string name="detail_status_done">Done</string>

    <string name="log_create_new">Create new</string>
    <string name="log_change_status_todo">Change status to ToDo</string>
    <string name="log_change_status_done">Change status to Done</string>
    <string name="log_change_group">Change registered group</string>
    <string name="log_change_contents">Change contents</string>

    <string name="setting_title">Setting</string>
    <string name="setting_todo_count">Display of ToDo count</string>
    <string name="setting_new_todo_order">Position to add new ToDo</string>
    <string name="setting_theme_color">Setting theme color</string>
    <string name="setting_backup_restore">Backup and restore</string>
    <string name="setting_remove_ads">Remove ads (one-time purchase)</string>
    <string name="setting_license">Lisence</string>
    <string name="setting_privacy_policy">Privacy policy</string>
    <string name="setting_star">Rate this app</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="next">Next</string>
    <string name="exec">Exec</string>
    <string name="move">Move</string>
    <string name="end">End</string>

    <string name="setting_check_operation">Check operation</string>
    <string name="setting_change_all_done">Check all</string>
    <string name="setting_change_all_todo">Uncheck all</string>
    <string name="setting_show_log_chart">Show log chart</string>

    <string name="chart_line_title">Total of done count</string>
    <string name="chart_bar_title">Done count of daily</string>
    <string name="chart_pie_title">Percentage of current operation types</string>
    <string name="chart_line_guide">Total</string>
    <string name="chart_bar_guide">Done count</string>
    <string name="chart_pie_guide">Log Kind (%)</string>

    <string name="privacy_policy_url">https://high-commu.amebaownd.com/pages/2891722/page_201905200001</string>
    <string name="star_url">https://play.google.com/store/apps/details?id=com.highcom.todolog</string>

    <string name="order_bottom">Add to bottom</string>
    <string name="order_bottom_detail">Add to bottom\n  (Sorted in ascending order)</string>
    <string name="order_top">Add to top</string>
    <string name="order_top_detail">Add to top\n  (Sorted in descending order)</string>

    <string name="color_topaz">Topaz</string>
    <string name="color_water_green">Water green</string>
    <string name="color_day_dream">Day dream</string>
    <string name="color_old_rose">Old rose</string>
    <string name="color_mauve">Mauve</string>
    <string name="color_french_gray">French gray</string>

    <string name="data_select_operation">Select operation</string>
    <string name="data_backup">Backup</string>
    <string name="data_restore">Restore</string>
    <string name="data_select_operation_err_message">No operation is selected</string>
    <string name="backup_message_front">Backup to </string>
    <string name="backup_message_rear"></string>
    <string name="no_access_message">You do not have access.\nPlease set the permission of the application.\nDo you want to go to settings?</string>
    <string name="backup_complete_message">Backup completed.</string>
    <string name="backup_failed_message">Backup failed</string>
    <string name="restore_message_front">Restore from </string>
    <string name="restore_message_rear"></string>
    <string name="restore_confirm_message">All data will be overwritten.\nDo you want to run it?</string>
    <string name="restore_processing">Restoring</string>
    <string name="restore_complete_message">Restore completed.\nRestart the app.</string>
    <string name="restore_failed_message">Restore failed</string>
    <string name="restore_failed_error_data_message">The specified file could not be recognized as backup data.</string>

    <!-- Billing related messages -->
    <string name="billing_error_query_product_details">Failed to query product details</string>
    <string name="billing_error_purchase_failed">Purchase failed</string>
    <string name="billing_error_service_disconnected">Billing service disconnected</string>
    <string name="billing_ads_already_removed">Ads are already removed</string>
</resources>