<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search_view"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        android:visible="true"
        android:title="Search Bar" />
    <item android:id="@+id/action_setting_always"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting_title"
        app:showAsAction="always">
    </item>
    <group android:id="@+id/change_all_group" >
        <item android:id="@+id/action_check_operation"
            android:title="@string/setting_check_operation"
            app:showAsAction="never">
            <menu>
                <item android:id="@+id/action_change_all_done"
                    android:title="@string/setting_change_all_done"
                    app:showAsAction="never">
                </item>
                <item android:id="@+id/action_change_all_todo"
                    android:title="@string/setting_change_all_todo"
                    app:showAsAction="never">
                </item>
            </menu>
        </item>
        <item android:id="@+id/action_show_log_chart"
            android:title="@string/setting_show_log_chart"
            app:showAsAction="never">
        </item>
        <item android:id="@+id/action_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting_title"
            app:showAsAction="never">
        </item>
    </group>
</menu>