<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_view"
    android:background="@color/cream"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/offwhite"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_theme_color"
            android:id="@+id/theme_color_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_theme_color"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:id="@+id/theme_color_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/offwhite"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_license"
            android:id="@+id/license_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_license"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:id="@+id/license_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/offwhite"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_privacy_policy"
            android:id="@+id/privacy_policy_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_privacy_policy"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:id="@+id/privacy_policy_text" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/offwhite"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_star"
            android:id="@+id/star_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_star"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:id="@+id/star_text" />

    </LinearLayout>
</LinearLayout>
